# universal-app-kit

./: .gitignore  Devrcfile  README.md  package.json  tsconfig.client.json  tsconfig.server.json
configs/: dev.json  example.json
src/: browser.tsx  build_info.tsx  router.tsx  server.tsx
src/components/: Hello.jsx  Hello.tsx  Html.tsx  my_styles.css
src/server/: arguments.tsx  middlewares.tsx  utils.tsx
src/stores/: todo.tsx
src/types/: globals.d.ts
tools/: dev-docker-compose.yml
tools/docker/: Dockerfile.app  Dockerfile.base
wasm-app/: Cargo.toml
wasm-app/src/: lib.rs
webpack/: config.ts  rules.ts
